<resources>
    <string name="app_name">배달ON</string>

    <!--Edit Nickname-->
    <string name="input_new_nickname">닉네임 입력</string>
    <string name="confirm_new_nickname">닉네임 변경 확인</string>
    <string name="complete_new_nickname">닉네임이 변경되었습니다</string>

    <!--View Store Detail-->
    <string name="title_store_name">가게 이름</string>
    <string name="content_store_name">실제 이름 자리</string>
    <string name="permission_denied">전화 권한이 거부되어 전화 기능을 사용할 수 없습니다</string>

    <string name="homepage_address">공식 홈페이지 주소</string>
    <string name="link_address">실제 주소 링크</string>

    <string name="title_phone_number">대표 전화번호</string>
    <string name="content_phone_number">실제 전화번호</string>

    <string name="phone_order">전화 주문</string>

    <!--Profile-->
    <string name="nickname">닉네임</string>
    <string name="koolunkle">koolunkle</string>
    <string name="change_nickname">닉네임 변경</string>

    <!--Store List Item-->
    <string name="store_name">가게 이름</string>

    <!--Main-->
    <string name="pizza_order">피자 주문</string>
    <string name="chicken_order">치킨 주문</string>
    <string name="profile_setting">프로필 설정</string>
</resources>